--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "short_name": "React App",
+  "short_name": "Overattached Parasites",
   "name": "Create React App Sample",
   "icons": [
     {
